# training

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: get_images_from_internet.ipynb
src/hackaton_model_training/: train.py
src/hackaton_model_training/data/: dataset.py  rotator.py
tests/: conftest.py  test_dataset.py  test_training.py
